<resources>
    <string name="app_name">Foodware</string>

    <string name="tab_sign_in">Login</string>
    <string name="tab_sign_up">Sign up</string>

    <!--    All image description   -->
    <string name="image_description">Nothing</string>

    <string name="splash_screen_logo_description">Logo will be replaced by original one</string>

    <string name="title_email_address">Email address</string>
    <string name="title_password">Password</string>
    <string name="title_forget_password">Forget password?</string>
    <string name="title_re_type_password">Re-type password</string>

    <!--    User types  -->
    <string name="customer">customer</string>
    <string name="vendor">vendor</string>
    <string name="rider">rider</string>
    <string name="title_select_user_type">Select user type</string>

    <!--    Navigation Drawer   -->
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="promotion">Promotions</string>
    <string name="transaction">Transactions</string>

    <string name="log_out">Log out</string>
    <string name="title_legal">Legal</string>
    <string name="title_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--    Restaurant status    -->
    <string name="open">Open</string>
    <string name="Close">Close</string>
    <string name="busy">Busy</string>

    <!--    Create vendor profile    -->
    <string name="title_upload_logo">Upload your Logo</string>
    <string name="title_restaurant_name">Restaurant Name</string>
    <string name="title_owner_name">Owner Name</string>
    <string name="title_owner_phone">Phone Number</string>
    <string name="title_bkash_number">Bkash Number</string>
    <string name="title_opening_at">Opening</string>
    <string name="title_closing_at">Closing</string>
    <string name="place_holder_start_time">07:00 AM</string>
    <string name="place_holder_end_time">11:00 PM</string>
    <string name="title_create">Create</string>
    <string name="title_restaurant_location">Restaurant Location</string>
    <string name="title_update">Update</string>
    <string name="title_menu_items">Menu Items</string>
    <string name="sub_title_your_cooking_meals">Your cooking Meals</string>

    <!--    Add Menu Item    -->
    <string name="title_add_item">Add Item</string>
    <string name="title_items_you_cook">Items you cook</string>
    <string name="title_price">Price</string>
    <string name="title_available_time">Available time :</string>
    <string name="title_discount_optional">Discount(optional):</string>
    <string name="title_category">Category</string>
    <string name="title_item_name">Item Name</string>


    <!--    Menu Items    -->
    <string name="placeholder_order_id">#iur-dhb-ed</string>
    <string name="placeholder_amount">500</string>
    <string name="button_title_items">Items</string>
    <string name="button_title_today">Today</string>
    <string name="button_title_next">Next</string>

    <!--    Vendor UI texts  -->
    <string name="ven_title_menu">Menu Items</string>
    <string name="ven_sub_title_menu">Your all cooking meals</string>

    <string name="ven_title_today">Today\'s Items</string>
    <string name="ven_sub_title_today">Your offering meals</string>

    <string name="ven_title_tomorrow">Tomorrow\'s Items</string>
    <string name="ven_sub_title_tomorrow">What you want to offer?</string>

    <!--    Order Item    -->
    <string name="title_order_list">Order List</string>
    <string name="sub_title_current_and_pending_orders">Current and pending orders</string>
    <string name="title_status_completed">Completed</string>
    <string name="title_current">Current</string>
    <string name="title_pre_order">Pre-order</string>
    <string name="ven_title_ongoing">Ongoing Orders</string>
    <string name="ven_title_delivered">Order history</string>
    <string name="ven_sub_title_delivered">Last 20 orders details</string>
    <string name="ven_sub_title_ongoing">Accept and process food for hungers</string>


</resources>