<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/img_auth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.auth.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_email_address"
            android:textColor="@color/text_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/et_email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_email"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/roboto"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintWidth_percent=".80"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_password"
            android:textColor="@color/text_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/et_email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_email"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:inputType="textPassword"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"
            app:layout_constraintWidth_percent=".80"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_re_type_password"
            android:textColor="@color/text_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/et_email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_email"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:inputType="textPassword"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_confirm_password"
            app:layout_constraintWidth_percent=".80"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />


        <TextView
            android:id="@+id/tv_user_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_select_user_type"
            android:textColor="@color/text_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/et_email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_email"
            app:layout_constraintTop_toBottomOf="@+id/et_confirm_password" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/et_confirm_password"
            app:layout_constraintStart_toStartOf="@+id/et_confirm_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_type">

            <RadioButton
                android:id="@+id/rb_customer"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/customer"
                android:textAlignment="center"
                android:fontFamily="@font/roboto"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

            <RadioButton
                android:id="@+id/rb_vendor"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/vendor"
                android:textAlignment="center"
                android:fontFamily="@font/roboto"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

            <RadioButton
                android:id="@+id/rb_rider"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/rider"
                android:fontFamily="@font/roboto"
                android:textAlignment="center"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/selector_rounded_button"
            android:fontFamily="@font/roboto"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/tab_sign_up"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>