<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.vendor.profile.CreateVendorProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/img_auth"
        android:isScrollContainer="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/img_header"
            android:background="@color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_description" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_upload_placeholder"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.55"
            android:contentDescription="@string/image_description" />

        <TextView
            android:id="@+id/tv_title_upload_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_upload_logo"
            android:textColor="@color/green_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/img_logo"
            app:layout_constraintStart_toStartOf="@+id/img_logo"
            app:layout_constraintTop_toBottomOf="@+id/img_logo"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_restaurant_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_restaurant_name"
            android:textColor="@color/text_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/et_restaurant_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_restaurant_name"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/et_restaurant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:inputType="text"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_title"
            app:layout_constraintWidth_percent=".80"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_owner_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_owner_name"
            android:textColor="@color/text_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/et_owner_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_owner_name"
            app:layout_constraintTop_toBottomOf="@+id/et_restaurant_name" />

        <EditText
            android:id="@+id/et_owner_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:inputType="text"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_owner_title"
            app:layout_constraintWidth_percent=".80"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_owner_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_owner_phone"
            android:textColor="@color/text_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/et_restaurant_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_restaurant_name"
            app:layout_constraintTop_toBottomOf="@+id/et_owner_name" />

        <EditText
            android:id="@+id/et_owner_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_owner_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_owner_phone"
            app:layout_constraintWidth_percent=".35"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"/>

        <TextView
            android:id="@+id/tv_bkash_number_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_bkash_number"
            android:textColor="@color/text_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/et_owner_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_bkash_number"
            app:layout_constraintTop_toTopOf="@+id/tv_owner_phone" />

        <EditText
            android:id="@+id/et_bkash_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@+id/et_owner_name"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/et_owner_phone_number"
            app:layout_constraintTop_toBottomOf="@+id/tv_bkash_number_title"
            app:layout_constraintWidth_percent=".35"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_opening_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_opening_at"
            android:textColor="@color/text_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/et_bkash_number"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_owner_phone_number"
            app:layout_constraintTop_toBottomOf="@+id/et_owner_phone_number" />

        <EditText
            android:id="@+id/et_opening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_outline_small"
            android:drawableEnd="@drawable/ic_clock"
            android:hint="@string/place_holder_start_time"
            android:inputType="time"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@+id/et_bkash_number"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_owner_phone_number"
            app:layout_constraintTop_toBottomOf="@+id/tv_opening_title"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_closing_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_closing_at"
            android:textColor="@color/text_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/et_bkash_number"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_closing"
            app:layout_constraintTop_toBottomOf="@+id/et_owner_phone_number" />

        <EditText
            android:id="@+id/et_closing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_outline_small"
            android:drawableEnd="@drawable/ic_clock"
            android:hint="@string/place_holder_end_time"
            android:inputType="time"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@+id/et_bkash_number"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/et_owner_phone_number"
            app:layout_constraintTop_toBottomOf="@+id/tv_closing_title"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_restaurant_location"
            android:textColor="@color/text_gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/et_restaurant_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_restaurant_name"
            app:layout_constraintTop_toBottomOf="@+id/et_opening" />

        <EditText
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/ic_outline_large"
            android:drawableEnd="@drawable/ic_navigation"
            android:fontFamily="@font/roboto"
            android:inputType="phone"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_owner_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_location_title"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent=".80"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/selector_small_rounded_button"
            android:fontFamily="@font/roboto"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/title_create"
            android:textAllCaps="false"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_closing"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_opening"
            app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
